cmake_minimum_required(VERSION 3.21)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithm algorithm.cpp)
add_executable(programmers programmers.cpp)

add_executable(primenumber primenumber.cpp)
add_executable(factorize factorize.cpp)
add_executable(recursion bigstone/recursion.cpp)
add_executable(permutation bigstone/permutation.cpp)
add_executable(permutationwithrecursion bigstone/permutationwithrecursion.cpp)
add_executable(split bigstone/split.cpp)
add_executable(combination bigstone/combination.cpp)
add_executable(combinationforloop bigstone/combinationforloop.cpp)
add_executable(typedef bigstone/basic/typedef.cpp)
add_executable(stl bigstone/basic/stl.cpp)
add_executable(pointer bigstone/basic/pointer.cpp)
add_executable(unique bigstone/basic/unique.cpp)
add_executable(input bigstone/basic/input.cpp)
add_executable(getline bigstone/basic/getline.cpp)
add_executable(output bigstone/basic/output.cpp)
add_executable(type bigstone/basic/type.cpp)
add_executable(stringfunction bigstone/basic/stringfunction.cpp)
add_executable(ascii bigstone/basic/ascii.cpp)
add_executable(reverse bigstone/basic/reverse.cpp)
add_executable(pair_tuple bigstone/basic/pair_tuple.cpp)
add_executable(type_conversion bigstone/basic/type_conversion.cpp)